--- a/netninja_graphql/package.json
+++ b/netninja_graphql/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "apollo": "^2.6.0",
+    "apollo-boost": "^0.3.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.18",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "react-apollo": "^2.5.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": ""
 }
